proj1/tests/correct/correct_continue_nesting.py

def f(n):
	while 1:
		if 0:
			continue
		break
	return n + 2;

print f(10)
