proj1/tests/error/continue_outside.py
def f(n):
	while 1:
		u = 1
		if 2:
			u = 2
	continue
